--- a/ScheduleApp/ScheduleApp/Web.config
+++ b/ScheduleApp/ScheduleApp/Web.config
@@ -4,13 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-
   <connectionStrings>
     <add name="connectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-ScheduleApp;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Database.mdf" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-      
-      
-      
   <system.web>
     <compilation debug="true" targetFramework="4.8"/>
     <httpRuntime targetFramework="4.8"/>
@@ -22,6 +18,7 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt"/>
       </controls>
     </pages>
+    <customErrors mode="Off"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
